--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EstacionApp">
+        android:theme="@style/Theme.EstacionApp"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- Importante para algunos dispositivos antiguos -->
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
